cc_library(
    name = "umq_headers",
    hdrs = glob([
        "*.h",
        "umq_ipc/*.h",  # 确保包含 umq_ipc 子目录下的头文件
        "transport_layer/*.h",
        "umq_ub/*.h",
    ]),
    includes = [".", "umq_ipc","transport_layer","umq_ub"],  # 设置头文件搜索路径，包含子目录
    visibility = ["//visibility:public"],  # 或至少包含 ["//src/hcom/urpc/umq/umq_ipc:__pkg__"]
)