# SPDX-License-Identifier: MIT
# Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.

load("//src/hcom/umq/bazel:copts.bzl", "UMQ_DEFAULT_COPTS")

cc_library(
    name = "perf",
    srcs = ["perf.c"],
    hdrs = ["perf.h"],
    includes = ["."],
    copts = UMQ_DEFAULT_COPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//src/hcom/umq/include:umq_headers",
        "//src/hcom/umq/util:common_util",
        "//src/hcom/umq/src:vlog",
    ]
)

cc_library(
    name = "dfx",
    srcs = ["dfx.c"],
    hdrs = ["dfx.h"],
    includes = ["."],
    copts = UMQ_DEFAULT_COPTS,
    visibility = ["//src/hcom/umq:__subpackages__"],
    deps = [
        "//src/hcom/umq/include/umq:umq_headers",
        "//src/hcom/umq/src:vlog",
        "//src/hcom/umq/src/dfx:perf",
    ]
)