# SPDX-License-Identifier: MIT
# Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.

load("//src/hcom/umq/bazel:copts.bzl", "UMQ_DEFAULT_COPTS", "UMQ_DEFAULT_LINKOPTS")

cc_library(
    name = "umq_buf_lib",
    srcs = glob(["**/*.c"]),
    hdrs = glob(["**/*.h"]),
    includes = ["."],
    copts = UMQ_DEFAULT_COPTS,
    linkopts = UMQ_DEFAULT_LINKOPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//src/hcom/umq/include:umq_headers",
        "//src/hcom/umq/util:common_util",
        "//src/hcom/umq/src:vlog",
        "//src/hcom/umq/src:umq_inner",
        "//src/hcom/umq/src:msg_ring",
    ]
)

cc_shared_library(
    name = "umq_buf",
    deps = [
        ":umq_buf_lib",
        "//src/hcom/umq/src:msg_ring",
        "//src/hcom/umq/src:vlog",
        "//src/hcom/umq/util:common_util",
    ],
    visibility = ["//visibility:public"],
)