# SPDX-License-Identifier: MIT
# Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.

load("//src/hcom/umq/bazel:copts.bzl", "UMQ_DEFAULT_COPTS", "UMQ_DEFAULT_LINKOPTS")

cc_library(
    name = "umq_ipc_lib",
    srcs = glob(["**/*.c"]),
    hdrs = glob(["**/*.h"]),
    includes = ["."],
    copts = UMQ_DEFAULT_COPTS,
    linkopts = UMQ_DEFAULT_LINKOPTS + [
        "-lpthread",
        "-lrt",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/hcom/umq/include:umq_headers",
        "//src/hcom/umq/include:umq_tp_headers",
        "//src/hcom/umq/include:umq_ipc_headers",
        "//src/hcom/umq/util:common_util",
        "//src/hcom/umq/src:vlog",
        "//src/hcom/umq/src:umq_inner",
        "//src/hcom/umq/src:msg_ring",
        "//src/hcom/umq/src:util_id_generator",
        "//src/hcom/umq/src/qbuf:umq_buf_lib",
        "//src/hcom/umq/include/umq:umq_headers",
    ],
)

cc_shared_library(
    name = "umq_ipc",
    deps = [
        ":umq_ipc_lib",
    ],
    dynamic_deps = ["//src/hcom/umq/src/qbuf:umq_buf"],
    visibility = ["//visibility:public"],
)