# SPDX-License-Identifier: MIT
# Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.

load("//src/hcom/umq/bazel:copts.bzl", "UMQ_DEFAULT_COPTS", "UMQ_DEFAULT_LINKOPTS")

cc_library(
    name = "umq_ub_lib",
    srcs = glob(["**/*.c"]),
    hdrs = glob(["**/*.h"]),
    includes = [
        ".",
        "core/",
        "core/private/",
        "core/flow_control",
    ],
    copts = UMQ_DEFAULT_COPTS,
    linkopts = UMQ_DEFAULT_LINKOPTS,
   visibility = ["//visibility:public"],
    deps = [
        "//src/hcom/umq/include:umq_headers",
        "//src/hcom/umq/include:umq_ub_headers",
        "//src/hcom/umq/util:common_util",
        "//src/hcom/umq/src:vlog",
        "//src/hcom/umq/src:util_id_generator",
        "//src/hcom/umq/src/qbuf:umq_buf_lib",
        "//src/hcom/umq/src/dfx:perf",
        "@urma//:urma_headers",
        "@urma//:urma_lib",
        "@urma//:tpsa_lib",
    ],
)

cc_shared_library(
    name = "umq_ub",
    deps = [
        ":umq_ub_lib",
    ],
    dynamic_deps = ["//src/hcom/umq/src/qbuf:umq_buf"],
    visibility = ["//visibility:public"],
)